--- a/ruoyi-common/pom.xml
+++ b/ruoyi-common/pom.xml
@@ -15,7 +15,7 @@
         <module>ruoyi-common-seata</module>
         <module>ruoyi-common-swagger</module>
         <module>ruoyi-common-security</module>
-        <module>ruoyi-common-datascope</module>
+<!--        <module>ruoyi-common-datascope</module>-->
         <module>ruoyi-common-datasource</module>
     </modules>
 
